2000-08-09  Not Zed  <NotZed@HelixCode.com>

	* camel-folder-search.c (camel_folder_search_execute_expression):
	Reorder search result in summary order if we searched with a
	summary.

2000-08-08  Dan Winship  <danw@helixcode.com>

	* camel-uid-cache.c: New code to keep an on-disk cache of what
	UIDs have been seen in a folder.

	* camel-provider.h: Add new flags CAMEL_PROVIDER_IS_SOURCE (mail
	can arrive in it by non-Camel means) and CAMEL_PROVIDER_IS_STORAGE
	(you can work with mail directly without needing to copy it local).

	* providers/*/camel-*-provider.c: Add flags as needed: imap and
	mbox are SOURCE and STORAGE. mh and nntp are just STORAGE, pop3 is
	just SOURCE.

	* camel-mime-message.c (process_header): Add another subject
	g_strstrip that fejj's earlier commit missed.

2000-08-07  Not Zed  <NotZed@HelixCode.com>

	* providers/mh/camel-mh-folder.c (mh_append_message): Only retry
	another uid if we had a name clash, otherwise fail.

2000-08-04  Not Zed  <NotZed@HelixCode.com>

	* camel-url.c (camel_url_set_protocol): 
	(camel_url_set_host): 
	(camel_url_set_path): 
	(camel_url_set_port): Url editing functions.

2000-08-02  Not Zed  <NotZed@HelixCode.com>

	* providers/mh/camel-mh-summary.c (camel_mh_summary_sync): Expunge
	from the end, so the index isn't messed up when you remove a
	message.

	* providers/mh/camel-mh-folder.c (mh_append_message): Fix a bug
	where it would never open an output file/uid.

	* providers/mbox/camel-mbox-store.c (rename_folder):
	Implementation for mbox as well.

	* camel-store.c (camel_store_rename_folder): New method to rename folders.
	(rename_folder): Default implementation.

	* providers/mh/camel-mh-store.c (delete_folder): Implement this.
	(rename_folder): Implement a rename operation.

2000-08-07  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c
	(imap_get_subfolder_names_internal): If we are trying to get a
	subfolder listing of the root folder, always make sure INBOX is
	there...
