@@ -1,3 +1,12 @@
+2000-08-09  Ettore Perazzoli  <ettore@helixcode.com>
+
+	* providers/nntp/camel-nntp-folder.c
+	(nntp_folder_set_message_flags): Get rid of an unused variable.
+
+	* providers/nntp/Makefile.am (INCLUDES): Fix includes so that we
+	don't use installed headers anymore.  [I copied this over from the
+	IMAP provider, that does not seem to have this problem.]
+
 2000-08-09  Not Zed  <NotZed@HelixCode.com>
 
 	* camel-folder-search.c (camel_folder_search_execute_expression):
